# Opensearch_dev_ui

./: README.md  docker-compose.yml  pyproject.toml
docker_scripts/: custom-entry.sh
src/opensearch_dev_ui/: __init__.py  __main__.py  app.py
src/opensearch_dev_ui/config/: __init__.py  config_tab.py
src/opensearch_dev_ui/explore/: explore.py
src/opensearch_dev_ui/index/: index.py
src/opensearch_dev_ui/opensearch/: __init__.py  opensearch.py
src/opensearch_dev_ui/record_add/: __init__.py  jap_record.py  mapping.py  record_add.py
src/opensearch_dev_ui/utils/: __ini__.py  streamitUtils.py
