[project]
name = "opensearch-dev-ui"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sanjay", email = "44315700+sanjumsanthosh@users.noreply.github.com" }
]
dependencies = [
    "streamlit>=1.40.0",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"dev" = "opensearch_dev_ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/opensearch_dev_ui"]
